--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -144,3 +144,19 @@ cutemusic:
 
 glovo:
   - com.glovo/com.glovoapp.onboarding.splash.SplashActivity
+
+birthday_countdown:
+  - de.drmaxnix.birthdaycountdown/de.drmaxnix.birthdaycountdown.MainActivity
+
+camaleon:
+  - com.arz.camaleon/com.arz.camaleon.SplashActivity
+  - com.arz.camaleon.unlocker/com.arz.camaleon.unlocker.MainActivity
+
+multilocale:
+  - io.nightdavisao.multilocale/io.nightdavisao.multilocale.MainActivity
+
+scaleway_manager:
+  - com.matthiasprost.scalewaymanager/com.matthiasprost.scalewaymanager.MainActivity
+
+simple_markdown:
+  - com.wbrawner.simplemarkdown.free/com.wbrawner.simplemarkdown.MainActivity
