Add icons&compinfo (#976)
* add icons

* add componentinfo

* add icons

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -86,3 +86,77 @@ phone_pe:
 
 usertesting:
   - com.usertesting.recorder.krsna/com.usertesting.recorder.startup.splash.SplashActivity
+
+audio_editor_and_music_editor:
+  - com.audio.editor.musiceditor.audioeditor/com.editor.audioeditor.ui.activity.SplashActivity
+
+daily_dev:
+  - dev.daily/dev.daily.LauncherActivity
+
+my_notes:
+  - net.kreosoft.android.mynotes/net.kreosoft.android.mynotes.controller.LaunchActivity
+
+poste_italiane:
+  - com.posteitaliane.spim/it.posteitaliane.df_home.splash.SplashActivity
+
+qr_barcode_scanner:
+  - com.barcode.qrcode.scanner.reader.pro/com.barcode.qrcode.scanner.reader.pro.activity.MainActivity
+
+settings_database_provider:
+  - com.netvor.settings.database.editor/com.netvor.settings.database.editor.view.ui.LauncherActivity
+
+temp_mail_io:
+  - io.tempmail.android/io.tempmail.mvp.root.RootActivity
+
+tile_shortcuts:
+  - com.tombayley.tileshortcuts/com.tombayley.tileshortcuts.app.ui.home.MainActivity
+
+windows_app:
+  - com.microsoft.rdc.androidx.beta/com.microsoft.windowsapp.ui.HomeActivity
+
+gta_san_andreas:
+  - com.rockstargames.gtasa/com.rockstargames.gtasa.Downloader
+
+discord:
+  - com.discord/com.discord.main.MainGalaxy
+  - com.discord/com.discord.main.MainController
+
+uniqlo:
+  - com.uniqlo.ph.catalogue/com.uniqlo.ja.catalogue.view.mobile.startup.StartupActivity
+
+telegram_nox:
+  - org.telegram.messenger.beta/org.telegram.messenger.NoxIcon
+
+telegram_turbo:
+  - org.telegram.messenger.web/org.telegram.messenger.TurboIcon
+
+nekogramx:
+  - nekox.messenger.broken/org.telegram.messenger.DefaultIcon
+
+google_wallet:
+  - com.google.android.apps.walletnfcrel/com.google.android.apps.wallet.GooglePayActivity
+
+youtube_music_revanced:
+  - anddea.youtube.music/com.google.android.apps.youtube.music.activities.MusicActivity
+
+cutemusic:
+  - com.sosauce.cutemusic/com.sosauce.cutemusic.main.MainActivity
+
+glovo:
+  - com.glovo/com.glovoapp.onboarding.splash.SplashActivity
+
+birthday_countdown:
+  - de.drmaxnix.birthdaycountdown/de.drmaxnix.birthdaycountdown.MainActivity
+
+camaleon:
+  - com.arz.camaleon/com.arz.camaleon.SplashActivity
+  - com.arz.camaleon.unlocker/com.arz.camaleon.unlocker.MainActivity
+
+multilocale:
+  - io.nightdavisao.multilocale/io.nightdavisao.multilocale.MainActivity
+
+scaleway_manager:
+  - com.matthiasprost.scalewaymanager/com.matthiasprost.scalewaymanager.MainActivity
+
+simple_markdown:
+  - com.wbrawner.simplemarkdown.free/com.wbrawner.simplemarkdown.MainActivity
