--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -23,3 +23,8 @@ switch_transfert_tool:
 
 bet365:
    - com.bet365SportsCA.Bet365_Application/com.bet365.sportsbook.AppDelegate
+
+wallsplash:
+   - com.app.hdwallpaper.live.walls.background/com.app.HDWallpaper.Live.Walls.Background.UiModule.SplashScreenActivity
+   - com.good2create.wallpaper_studio_10/com.good2create.wallpaper_studio_10.MainActivity
+   - com.wallpapers.papers/com.wallpapers.papers.activity.SplashScreen
