Add JBL Portable icon & adidas ComponentInfos

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -22,3 +22,9 @@ wallsplash:
 
 youtube_revanced_alt_6:
    - app.rvx.android.youtube/com.google.android.youtube.app.honeycomb.Shell$HomeActivity
+
+adidas:
+   - com.adidas.app/com.adidas.app.MainActivity
+
+jbl_portable:
+   - com.harman.ble.jbllink/com.harman.jbl.portable.WelcomeActivity
