Add myAakash icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -28,3 +28,6 @@ adidas:
 
 jbl_portable:
    - com.harman.ble.jbllink/com.harman.jbl.portable.WelcomeActivity
+
+myaakash:
+   - com.aakash.myaakashapp/com.aakash.myaakashapp.splashscreen.activity.SplashActivity
