Add Samsung Visual Voicemail icon + Mercari ComponentInfos

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -31,3 +31,9 @@ jbl_portable:
 
 myaakash:
    - com.aakash.myaakashapp/com.aakash.myaakashapp.splashscreen.activity.SplashActivity
+
+mercari_alt:
+   - com.kouzoh.mercari/com.mercari.base.MainActivity
+   
+samsung_visual_voicemail:
+   - com.samsung.vvm/com.samsung.vvm.vvmapp.VVMApplicationAlias
