Add Mega ComponentInfos

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -37,3 +37,6 @@ mercari_alt:
    
 samsung_visual_voicemail:
    - com.samsung.vvm/com.samsung.vvm.vvmapp.VVMApplicationAlias
+   
+mega:
+   - mega.privacy.android.app/mega.privacy.android.app.presentation.login.LoginActivity
