Add ComponentInfos + Fix

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -34,9 +34,12 @@ myaakash:
 
 mercari_alt:
    - com.kouzoh.mercari/com.mercari.base.MainActivity
-   
+
 samsung_visual_voicemail:
    - com.samsung.vvm/com.samsung.vvm.vvmapp.VVMApplicationAlias
-   
-mega:
-   - mega.privacy.android.app/mega.privacy.android.app.presentation.login.LoginActivity
+
+beats:
+   - com.apple.bnd/com.apple.vienna.v4.interaction.presentation.screens.welcome.WelcomeActivity
+
+telegram_turbo:
+   - org.telegram.messenger.web/org.telegram.messenger.TurboIcon
