Add BBC Bitesize icon, Update rest of BBC apps, Add ComponentInfos

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -40,3 +40,6 @@ samsung_visual_voicemail:
 
 beats:
    - com.apple.bnd/com.apple.vienna.v4.interaction.presentation.screens.welcome.WelcomeActivity
+
+bbc_bitesize:
+   - uk.co.bbc.bitesize/uk.co.bbc.maf.BootstrapActivity
