--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -43,3 +43,21 @@ beats:
 
 bbc_bitesize:
    - uk.co.bbc.bitesize/uk.co.bbc.maf.BootstrapActivity
+
+mindful:
+   - com.mindful.android/com.mindful.android.MainActivity
+
+pinnit:
+   - dev.sasikanth.pinnit2/dev.sasikanth.pinnit.MainActivity
+
+panels:
+   - art.panels.wallpapers.playstore/actionwalls.activity.MainActivity
+
+regexh:
+   - sky.programs.regexh/sky.programs.regexh.MainActivity
+
+stopscroll:
+   - com.noscroll.antiscroll/com.noscroll.antiscroll.ui.main.MainActivity
+
+techne:
+   - com.trianglz.techne_summit/com.trianglz.techne_summit.modules.splash.presentation.SplashActivity
