fixed panels icon and readded pinnit alt

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -50,7 +50,7 @@ mindful:
 pinnit:
    - dev.sasikanth.pinnit2/dev.sasikanth.pinnit.MainActivity
 
-panels:
+panels_mkbhd:
    - art.panels.wallpapers.playstore/actionwalls.activity.MainActivity
 
 regexh:
