--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -61,3 +61,22 @@ stopscroll:
 
 techne:
    - com.trianglz.techne_summit/com.trianglz.techne_summit.modules.splash.presentation.SplashActivity
+
+
+droidcrypt:
+  - com.nemesis.droidcrypt/com.nemesis.droidcrypt.MainActivity
+
+fetchit:
+  - com.tharunbirla.fetchit/com.tharunbirla.fetchit.MainActivity
+
+meditation_assistant:
+  - sh.ftp.rocketninelabs.meditationassistant.opensource/sh.ftp.rocketninelabs.meditationassistant.MainActivity
+
+my_brain:
+  - com.mhss.app.mybrain/com.mhss.app.mybrain.presentation.main.MainActivity
+
+picguard:
+  - com.kjxbyz.watermarkassistant.pro/com.kjxbyz.watermarkassistant.MainActivity
+
+vaani:
+  - dr.blank.vaani/com.ryanheise.audioservice.AudioServiceActivity
