--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -80,3 +80,6 @@ picguard:
 
 vaani:
   - dr.blank.vaani/com.ryanheise.audioservice.AudioServiceActivity
+
+etchdroid:
+  - eu.depau.etchdroid/eu.depau.etchdroid.ui.MainActivity
