Updated 1 Icon (Qwant)

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -47,6 +47,8 @@ mindful:
 pinnit:
   - dev.sasikanth.pinnit2/dev.sasikanth.pinnit.MainActivity
 
+pinnit_alt_1: {}
+
 panels_mkbhd:
   - art.panels.wallpapers.playstore/actionwalls.activity.MainActivity
 
@@ -79,3 +81,8 @@ vaani:
 
 etchdroid:
   - eu.depau.etchdroid/eu.depau.etchdroid.ui.MainActivity
+
+qwant:
+   - com.qwant.liberty/com.qwant.android.qwantbrowser.MainActivity
+
+qwant_alt_1: {}
