Add Samsung Gaming Hub icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -86,3 +86,6 @@ qwant:
    - com.qwant.liberty/com.qwant.android.qwantbrowser.MainActivity
 
 qwant_alt_1: {}
+
+samsung_gaming_hub:
+  - com.samsung.android.game.gamehome/com.samsung.android.game.gamehome.app.MainActivity
