Add MyBRD Mobile, FamPay Alt and OnePlus IR Remote icons

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -89,3 +89,17 @@ qwant_alt_1: {}
 
 samsung_gaming_hub:
   - com.samsung.android.game.gamehome/com.samsung.android.game.gamehome.app.MainActivity
+  
+mybrd_mobile:
+  - brd.bankingapp.android/ind.bankingapp.android.framework.activity.ActivatorActivity
+
+_1xbet:
+  - org.xbet.client1/org.xbet.client1.features.appactivity.ApplicationActivity
+
+fampay_alt_1: {}
+
+fampay:
+  - com.fampay.in/com.fampay.in.app_icon_alias.AppIconsAlias.DefaultIconAlias
+
+one__plus_ir_remote:
+  - com.oplus.consumerIRApp/com.oplus.consumerIRApp.navigation.HomeActivity
