--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -103,3 +103,12 @@ fampay:
 
 one__plus_ir_remote:
   - com.oplus.consumerIRApp/com.oplus.consumerIRApp.navigation.HomeActivity
+
+bbva:
+  - com.bancomer.mbanking/com.bbva.glomohybrid.splash.presentation.view.SplashActivity
+
+mercado_pago:
+  - com.mercadopago.wallet/com.mercadopago.wallet.splash.SplashActivity
+
+my__fitness__pal:
+  - com.myfitnesspal.android/com.myfitnesspal.android.splash.SplashActivity
