Add icons + Fixes

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -112,3 +112,24 @@ mercado_pago:
 
 my__fitness__pal:
   - com.myfitnesspal.android/com.myfitnesspal.android.splash.SplashActivity
+
+rxdroid:
+  - com.bestfuncoolapps.TakeYourPills/com.bestfuncoolapps.TakeYourPills.MainActivity
+
+partiful:
+  - com.partiful.partiful/com.partiful.partiful.MainActivity
+
+sony_songpal:
+  - com.sony.songpal/com.sony.songpal.app.view.overview.DeviceAndGroupActivity
+
+kotak811_mobile_banking:
+  - com.kotak811mobilebankingapp.instantsavingsupiscanandpayrecharge/com.kotak811mobilebankingapp.instantsavingsupiscanandpayrecharge.MainActivity
+
+remarkable_mobile:
+  - com.remarkable.mobile/com.remarkable.mobile.MainActivity
+
+swedbank:
+  - se.swedbank.mobil/se.swedbank.mobilbank.feature.splashscreen.SplashActivity
+
+air_miles_reward_program:
+  - com.airmiles/com.airmiles.modules.welcome.splash.SplashActivity
