--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -133,3 +133,9 @@ swedbank:
 
 air_miles_reward_program:
   - com.airmiles/com.airmiles.modules.welcome.splash.SplashActivity
+
+virgin_voyages:
+  - com.virginvoyages.sailorapp/com.zoontek.rnbootsplash.RNBootSplashActivity
+
+timeshifter:
+  - com.timeshifter.timeshifter/com.timeshifter.timeshifter.SplashActivity
