--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -139,3 +139,48 @@ virgin_voyages:
 
 timeshifter:
   - com.timeshifter.timeshifter/com.timeshifter.timeshifter.SplashActivity
+
+aer:
+  - alt.nainapps.aer/alt.nainapps.aer.shell.LauncherActivity
+
+bleota:
+  - com.vovagorodok.ble_ota_app/com.vovagorodok.ble_ota_app.MainActivity
+
+blink_comparison:
+  - org.proninyaroslav.blink_comparison/org.proninyaroslav.blink_comparison.MainActivity
+
+chatlaunch_for_whatsapp:
+  - dev.theolm.wwc/dev.theolm.wwc.ui.dialog.MainActivity
+
+dahdidahdit:
+  - com.paddlesandbugs.dahdidahdit/com.paddlesandbugs.dahdidahdit.base.MainActivity
+
+fitness_calendar:
+  - com.inky.fitnesscalendar/com.inky.fitnesscalendar.MainActivity
+
+fossify_camera:
+  - org.fossify.camera/org.fossify.camera.activities.SplashActivity.Green
+
+fossify_launcher:
+  - org.fossify.home/org.fossify.home.activities.SplashActivity.Green
+
+mock_traffic:
+  - com.nemesis.mocktraffic/com.nemesis.mocktraffic.MainActivity
+
+nex_notes:
+  - com.swatian.nexnotes/com.swatian.nexnotes.activities.MainActivity
+
+peak_orama:
+  - org.woheller69.PeakOrama/org.woheller69.PeakOrama.MainActivity
+
+rssaid:
+  - com.gmail.cn.leetao94.rssaid/com.gmail.leetao94cn.rssaid.MainActivity
+
+supir:
+  - xyz.regulad.supir/xyz.regulad.supir.MainActivity
+
+wikireader:
+  - org.nsh07.wikireader/org.nsh07.wikireader.MainActivity
+
+word_of_the_day:
+  - com.saverio.wordoftheday_en/com.saverio.wordoftheday_en.SplashScreen
