--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -184,3 +184,6 @@ wikireader:
 
 word_of_the_day:
   - com.saverio.wordoftheday_en/com.saverio.wordoftheday_en.SplashScreen
+
+pdf_reader:
+  - com.saverio.pdfviewer/com.saverio.pdfviewer.MainActivity
