Added 3 new icons

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -8,3 +8,11 @@
 #
 # new_icon_2_alt_1: {}
 #
+comics_plus:
+- com.librarypass/com.librarypass.MainActivity
+
+ca_dmv_wallet:
+- gov.ca.dmv.wallet/com.spruceid.app.credible.mdl.MainActivity
+
+connects:
+- org.bloomberg.connects.docent/org.bloomberg.connects.docent.MainActivity
