Add SpielerPlus icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -16,3 +16,6 @@ ca_dmv_wallet:
 
 connects:
 - org.bloomberg.connects.docent/org.bloomberg.connects.docent.MainActivity
+
+spielerplus:
+- org.spielerplus.web/org.spielerplus.web.MainActivity
