Add BAWAG P.S.K icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -19,3 +19,6 @@ connects:
 
 spielerplus:
 - org.spielerplus.web/org.spielerplus.web.MainActivity
+
+bawag:
+- com.bawagpsk.bawagpsk/com.bawagpsk.bawagpsk.ui.splash.SplashActivity
