Add eAusweise icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -22,3 +22,6 @@ spielerplus:
 
 bawag:
 - com.bawagpsk.bawagpsk/com.bawagpsk.bawagpsk.ui.splash.SplashActivity
+
+eausweise:
+- at.gv.oe.awp.eausweise/at.gv.oe.awp.app.MainActivity
