Add BusBahnBim icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -25,3 +25,6 @@ bawag:
 
 eausweise:
 - at.gv.oe.awp.eausweise/at.gv.oe.awp.app.MainActivity
+
+busbahnbim:
+- de.hafas.android.stv/de.hafas.main.HafasApp
