Add new icons (#995)
* Add SpielerPlus icon

* Add contributor

* Add BAWAG P.S.K icon

* Add eAusweise icon

* Add BusBahnBim icon

* Fix color Bawag icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -16,3 +16,15 @@ ca_dmv_wallet:
 
 connects:
 - org.bloomberg.connects.docent/org.bloomberg.connects.docent.MainActivity
+
+spielerplus:
+- org.spielerplus.web/org.spielerplus.web.MainActivity
+
+bawag:
+- com.bawagpsk.bawagpsk/com.bawagpsk.bawagpsk.ui.splash.SplashActivity
+
+eausweise:
+- at.gv.oe.awp.eausweise/at.gv.oe.awp.app.MainActivity
+
+busbahnbim:
+- de.hafas.android.stv/de.hafas.main.HafasApp
