Add Icons + ComponentInfos

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -28,3 +28,21 @@ eausweise:
 
 busbahnbim:
 - de.hafas.android.stv/de.hafas.main.HafasApp
+
+music_alt_3:
+  - musicplayer.playmusic.audioplayer/musicplayer.playmusic.audioplayer.ui.splash.SplashActivity
+
+navy_federal_credit_union:
+  - com.navyfederal.android/org.navyfederal.android.NFCUActivity
+
+worldcoin:
+  - com.worldcoin/com.worldcoin.app.main.MainActivity
+
+spond:
+  - com.spond.spond/com.spond.view.activities.LaunchActivity
+
+sennheiser_hearing_test:
+  - com.sennheiser.screener/com.sennheiser.screener.MainActivity
+
+sharezone:
+  - de.codingbrain.sharezone/de.codingbrain.sharezone.MainActivity
