--- a/contribs/requests.yml
+++ b/contribs/requests.yml
@@ -41,16 +41,6 @@ com.maleo.bussimulatorid/com.unity3d.player.UnityPlayerActivity:
         - https://f-droid.org/en/packages/com.maleo.bussimulatorid/
         - https://google.com/search?q=com.maleo.bussimulatorid
 
-app.rvx.android.youtube/com.google.android.youtube.app.honeycomb.Shell$HomeActivity:
-    name: YouTube
-    reqt: 11
-    reql: 2024-09-28 18:28:28
-    hash: d0bc84fdcb5be7b23db3cff02ecda21f6c28c486
-    urls:
-        - https://play.google.com/store/apps/details?id=app.rvx.android.youtube
-        - https://f-droid.org/en/packages/app.rvx.android.youtube/
-        - https://google.com/search?q=app.rvx.android.youtube
-
 com.msob7y.namida/com.msob7y.namida.NamidaMainActivity:
     name: Namida
     reqt: 10
@@ -141,26 +131,6 @@ com.bluepoch.m.en.reverse1999/com.ssgame.mobile.overseas.frame.activity.AppStart
         - https://f-droid.org/en/packages/com.bluepoch.m.en.reverse1999/
         - https://google.com/search?q=com.bluepoch.m.en.reverse1999
 
-com.phonepe.app/com.phonepe.app.ui.activity.Navigator_MainActivity:
-    name: PhonePe
-    reqt: 4
-    reql: 2024-09-23 17:54:21
-    hash: e480c2ca2194737928707dfdaa08d054de9c33de
-    urls:
-        - https://play.google.com/store/apps/details?id=com.phonepe.app
-        - https://f-droid.org/en/packages/com.phonepe.app/
-        - https://google.com/search?q=com.phonepe.app
-
-com.navyfederal.android/org.navyfederal.android.NFCUActivity:
-    name: Navy Federal
-    reqt: 4
-    reql: 2024-09-17 01:21:05
-    hash: b48529bb796dbf772cb9c78610f1b69946bb6768
-    urls:
-        - https://play.google.com/store/apps/details?id=com.navyfederal.android
-        - https://f-droid.org/en/packages/com.navyfederal.android/
-        - https://google.com/search?q=com.navyfederal.android
-
 com.cimb.cimbocto/my.com.cimbocto.app.MainActivity:
     name: MY
     reqt: 4
@@ -221,36 +191,6 @@ cz.alza.eshop/cz.alza.base.android.setup.ui.activity.MainActivity:
         - https://f-droid.org/en/packages/cz.alza.eshop/
         - https://google.com/search?q=cz.alza.eshop
 
-musicplayer.playmusic.audioplayer/musicplayer.playmusic.audioplayer.ui.splash.SplashActivity:
-    name: Player
-    reqt: 4
-    reql: 2024-07-07 05:34:28
-    hash: 7de4411c3f4ef0565c6b538f09cddde317a48983
-    urls:
-        - https://play.google.com/store/apps/details?id=musicplayer.playmusic.audioplayer
-        - https://f-droid.org/en/packages/musicplayer.playmusic.audioplayer/
-        - https://google.com/search?q=musicplayer.playmusic.audioplayer
-
-com.emeint.android.myservices/com.emeint.android.myservices.ui.screens.splash.DefaultLauncher:
-    name: Ana Vodafone
-    reqt: 3
-    reql: 2024-10-01 14:20:42
-    hash: abfcf921f1f768c56b3c9acc6d6e15c1c9c86429
-    urls:
-        - https://play.google.com/store/apps/details?id=com.emeint.android.myservices
-        - https://f-droid.org/en/packages/com.emeint.android.myservices/
-        - https://google.com/search?q=com.emeint.android.myservices
-
-com.meesho.supply/com.meesho.supply.default:
-    name: Meesho
-    reqt: 3
-    reql: 2024-10-01 12:58:36
-    hash: 1a0305c46f8a7688e2a0926dee246911ed53c309
-    urls:
-        - https://play.google.com/store/apps/details?id=com.meesho.supply
-        - https://f-droid.org/en/packages/com.meesho.supply/
-        - https://google.com/search?q=com.meesho.supply
-
 com.playstack.balatro.android/org.love2d.android.PlatformActivity:
     name: Balatro
     reqt: 3
@@ -260,26 +200,6 @@ com.playstack.balatro.android/org.love2d.android.PlatformActivity:
         - https://play.google.com/store/apps/details?id=com.playstack.balatro.android
         - https://f-droid.org/en/packages/com.playstack.balatro.android/
         - https://google.com/search?q=com.playstack.balatro.android
-
-com.goblintools/com.goblintools.MainActivity:
-    name: Tools
-    reqt: 3
-    reql: 2024-09-27 08:03:42
-    hash: 0796c659ba357cb12c1a7d47f49e2dae74e3c782
-    urls:
-        - https://play.google.com/store/apps/details?id=com.goblintools
-        - https://f-droid.org/en/packages/com.goblintools/
-        - https://google.com/search?q=com.goblintools
-
-mega.privacy.android.app/mega.privacy.android.app.presentation.login.LoginActivity:
-    name: MEGA
-    reqt: 3
-    reql: 2024-09-25 15:17:37
-    hash: e443e1d3118eb727503529681c8c108e6e8e9e0d
-    urls:
-        - https://play.google.com/store/apps/details?id=mega.privacy.android.app
-        - https://f-droid.org/en/packages/mega.privacy.android.app/
-        - https://google.com/search?q=mega.privacy.android.app
 
 com.miui.videoplayer/com.miui.video.global.app.LauncherAlias:
     name: Mi Vidéo
@@ -300,36 +220,6 @@ com.tabletkiua.tabletki/com.tabletkiua.tabletki.main.SplashScreen:
         - https://play.google.com/store/apps/details?id=com.tabletkiua.tabletki
         - https://f-droid.org/en/packages/com.tabletkiua.tabletki/
         - https://google.com/search?q=com.tabletkiua.tabletki
-
-com.worldcoin/com.worldcoin.app.main.MainActivity:
-    name: World App
-    reqt: 3
-    reql: 2024-09-22 05:50:31
-    hash: 35b35b3ab17e41588e61665f80b961368f24c32c
-    urls:
-        - https://play.google.com/store/apps/details?id=com.worldcoin
-        - https://f-droid.org/en/packages/com.worldcoin/
-        - https://google.com/search?q=com.worldcoin
-
-com.spond.spond/com.spond.view.activities.LaunchActivity:
-    name: Spond
-    reqt: 3
-    reql: 2024-09-21 08:37:21
-    hash: 8eba8057b4f3d6ce5035fc2c0524c728370cc896
-    urls:
-        - https://play.google.com/store/apps/details?id=com.spond.spond
-        - https://f-droid.org/en/packages/com.spond.spond/
-        - https://google.com/search?q=com.spond.spond
-
-com.samsung.vvm/com.samsung.vvm.vvmapp.VVMApplicationAlias:
-    name: Voicemail
-    reqt: 3
-    reql: 2024-09-20 01:52:17
-    hash: 42f07a66a1748c60d39b338a59cefb1cc6db4166
-    urls:
-        - https://play.google.com/store/apps/details?id=com.samsung.vvm
-        - https://f-droid.org/en/packages/com.samsung.vvm/
-        - https://google.com/search?q=com.samsung.vvm
 
 com.boi.ua.android/com.boi.ua.MainActivity:
     name: Mobile
@@ -361,16 +251,6 @@ com.tozelabs.tvshowtime/com.tozelabs.tvshowtime.MainActivity:
         - https://f-droid.org/en/packages/com.tozelabs.tvshowtime/
         - https://google.com/search?q=com.tozelabs.tvshowtime
 
-com.kouzoh.mercari/com.mercari.base.MainActivity:
-    name: メルカリ
-    reqt: 3
-    reql: 2024-09-07 23:54:17
-    hash: d95bff633fb6a0cdb88589a8d1248953800dadd1
-    urls:
-        - https://play.google.com/store/apps/details?id=com.kouzoh.mercari
-        - https://f-droid.org/en/packages/com.kouzoh.mercari/
-        - https://google.com/search?q=com.kouzoh.mercari
-
 com.fengiiley.frlegends/com.unity3d.player.UnityPlayerActivity:
     name: FR Legends
     reqt: 3
@@ -380,26 +260,6 @@ com.fengiiley.frlegends/com.unity3d.player.UnityPlayerActivity:
         - https://play.google.com/store/apps/details?id=com.fengiiley.frlegends
         - https://f-droid.org/en/packages/com.fengiiley.frlegends/
         - https://google.com/search?q=com.fengiiley.frlegends
-
-com.aakash.myaakashapp/com.aakash.myaakashapp.splashscreen.activity.SplashActivity:
-    name: myAakash
-    reqt: 3
-    reql: 2024-08-27 15:41:58
-    hash: 3a6ebe3d8b1b5a1ce068fdcc59bf455391b28772
-    urls:
-        - https://play.google.com/store/apps/details?id=com.aakash.myaakashapp
-        - https://f-droid.org/en/packages/com.aakash.myaakashapp/
-        - https://google.com/search?q=com.aakash.myaakashapp
-
-com.harman.ble.jbllink/com.harman.jbl.portable.WelcomeActivity:
-    name: Portable
-    reqt: 3
-    reql: 2024-08-25 01:49:19
-    hash: 9254cf85801ba23715bd0effe8464e997f01cd3b
-    urls:
-        - https://play.google.com/store/apps/details?id=com.harman.ble.jbllink
-        - https://f-droid.org/en/packages/com.harman.ble.jbllink/
-        - https://google.com/search?q=com.harman.ble.jbllink
 
 com.blackmagicdesign.android.blackmagiccam/com.blackmagicdesign.android.blackmagiccam.ui.MainActivity:
     name: Blackmagic Camera
@@ -481,15 +341,15 @@ com.studiobside.CounterSide/com.toast.android.gamebase.activity.GamebaseMainActi
         - https://f-droid.org/en/packages/com.studiobside.CounterSide/
         - https://google.com/search?q=com.studiobside.CounterSide
 
-.beautifier.bluetooth.music.more.bass.low.volume/sound.beautifier.bluetooth.music.more.bass.low.volume.MiserableUseless:
+sound.beautifier.bluetooth.music.more.bass.low.volume/sound.beautifier.bluetooth.music.more.bass.low.volume.MiserableUseless:
     name: sound
     reqt: 3
     reql: 2024-07-03 19:40:10
     hash: 398302afca6b9c6e1624e3a5906a158138c5dc98
     urls:
-        - https://play.google.com/store/apps/details?id=.beautifier.bluetooth.music.more.bass.low.volume
-        - https://f-droid.org/en/packages/.beautifier.bluetooth.music.more.bass.low.volume/
-        - https://google.com/search?q=.beautifier.bluetooth.music.more.bass.low.volume
+        - https://play.google.com/store/apps/details?id=sound.beautifier.bluetooth.music.more.bass.low.volume
+        - https://f-droid.org/en/packages/sound.beautifier.bluetooth.music.more.bass.low.volume/
+        - https://google.com/search?q=sound.beautifier.bluetooth.music.more.bass.low.volume
 
 app.hoarder.hoardermobile/app.hoarder.hoardermobile.MainActivity:
     name: Hoarder App
@@ -500,16 +360,6 @@ app.hoarder.hoardermobile/app.hoarder.hoardermobile.MainActivity:
         - https://play.google.com/store/apps/details?id=app.hoarder.hoardermobile
         - https://f-droid.org/en/packages/app.hoarder.hoardermobile/
         - https://google.com/search?q=app.hoarder.hoardermobile
-
-com.sennheiser.screener/com.sennheiser.screener.MainActivity:
-    name: Hearing Test
-    reqt: 2
-    reql: 2024-09-30 08:02:31
-    hash: 294fe5dfa9c657abc3fbbe80f9a1d09a84c4f36d
-    urls:
-        - https://play.google.com/store/apps/details?id=com.sennheiser.screener
-        - https://f-droid.org/en/packages/com.sennheiser.screener/
-        - https://google.com/search?q=com.sennheiser.screener
 
 com.pamsys.lexisaudioeditor/crc641de11b621e6c00bd.MainActivity:
     name: Lexis Audio Editor
@@ -540,16 +390,6 @@ com.ProjectMoon.LimbusCompany/com.unity3d.player.UnityPlayerActivity:
         - https://play.google.com/store/apps/details?id=com.ProjectMoon.LimbusCompany
         - https://f-droid.org/en/packages/com.ProjectMoon.LimbusCompany/
         - https://google.com/search?q=com.ProjectMoon.LimbusCompany
-
-de.codingbrain.sharezone/de.codingbrain.sharezone.MainActivity:
-    name: Sharezone
-    reqt: 2
-    reql: 2024-09-28 09:04:56
-    hash: 9328d9fc9753e6bc0ac5f162395eb4ea9491e700
-    urls:
-        - https://play.google.com/store/apps/details?id=de.codingbrain.sharezone
-        - https://f-droid.org/en/packages/de.codingbrain.sharezone/
-        - https://google.com/search?q=de.codingbrain.sharezone
 
 com.indyx.android/com.indyx.android.MainActivity:
     name: Indyx
