--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -79,3 +79,12 @@ smartpixelsposed:
 
 squad_busters:
   - com.supercell.squad/com.supercell.squad.GameApp
+
+musicsearch:
+  - io.github.lydavid.musicsearch/ly.david.musicsearch.android.app.MainActivity
+
+rsaf:
+  - com.chiller3.rsaf/com.chiller3.rsaf.settings.SettingsActivity
+
+seafile:
+  - com.seafile.seadroid2/com.seafile.seadroid2.ui.SplashActivity
