--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -46,3 +46,45 @@ sennheiser_hearing_test:
 
 sharezone:
   - de.codingbrain.sharezone/de.codingbrain.sharezone.MainActivity
+
+chatair:
+  - info.flyun.chatair/org.telegram.messenger.DefaultIcon
+
+clipcascade:
+  - com.clipcascade/com.clipcascade.MainActivity
+
+cwtch:
+  - im.cwtch.flwtch/im.cwtch.flwtch.MainActivity
+
+discord_revenge:
+  - app.revenge/com.discord.main.MainDefault
+
+fboard:
+  - org.blinksd.board/org.blinksd.board.activities.SetupActivityV2
+
+icon_packer:
+  - cn.ommiao.iconpacker/cn.ommiao.iconpacker.MainActivity
+
+journalize:
+  - com.example.journal/com.example.journal.EntryEditorActivity
+
+namida:
+  - com.msob7y.namida/com.msob7y.namida.NamidaMainActivity
+
+revenge_manager:
+  - app.revenge.manager/app.revenge.manager.ui.activity.MainActivity
+
+smartpixelsposed:
+  - com.fk.smartpixelsposed/com.fk.smartpixelsposed.MainActivity
+
+squad_busters:
+  - com.supercell.squad/com.supercell.squad.GameApp
+
+musicsearch:
+  - io.github.lydavid.musicsearch/ly.david.musicsearch.android.app.MainActivity
+
+rsaf:
+  - com.chiller3.rsaf/com.chiller3.rsaf.settings.SettingsActivity
+
+seafile:
+  - com.seafile.seadroid2/com.seafile.seadroid2.ui.SplashActivity
