Add icon for five surveys

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -88,3 +88,6 @@ rsaf:
 
 seafile:
   - com.seafile.seadroid2/com.seafile.seadroid2.ui.SplashActivity
+  
+five_surveys:
+  - com.fivesurveys.mobile/com.fivesurveys.mobile.MainActivity
