--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -88,3 +88,6 @@ rsaf:
 
 seafile:
   - com.seafile.seadroid2/com.seafile.seadroid2.ui.SplashActivity
+
+idesk_studio:
+  - su.idesk.mobile/crc64f08bd7dc3248ef8c.MainActivity
