new compinfo: Pepper

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -91,3 +91,6 @@ seafile:
 
 idesk_studio:
   - su.idesk.mobile/crc64f08bd7dc3248ef8c.MainActivity
+
+pepper:
+  - ru.pepper/com.desidime.app.tour.SplashScreenActivity
