new compinfo: VTB Online

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -94,3 +94,6 @@ idesk_studio:
 
 pepper:
   - ru.pepper/com.desidime.app.tour.SplashScreenActivity
+
+vtb_online:
+  - ru.vtb24.mobilebanking.android/ru.vtb.feature.signup.impl.loading.presentation.view.LoadingScreenActivity
