new compinfo: Stars Coffee

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -97,3 +97,6 @@ pepper:
 
 vtb_online:
   - ru.vtb24.mobilebanking.android/ru.vtb.feature.signup.impl.loading.presentation.view.LoadingScreenActivity
+
+stars_coffee:
+  - ru.stars_coffee.app/com.example.starbucks_app.MainActivity
