new icon: toSim

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -100,3 +100,6 @@ vtb_online:
 
 stars_coffee:
   - ru.stars_coffee.app/com.example.starbucks_app.MainActivity
+
+tosim:
+  - ua.sim23/ua.sim23.MainActivity
