new compinfo: Rozetka

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -103,3 +103,6 @@ stars_coffee:
 
 tosim:
   - ua.sim23/ua.sim23.MainActivity
+
+rozetka:
+  - ua.com.rozetka.shop/ua.com.rozetka.shop.ui.MainActivity
