new icon: Block Blast!

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -106,3 +106,6 @@ tosim:
 
 rozetka:
   - ua.com.rozetka.shop/ua.com.rozetka.shop.ui.MainActivity
+
+block_blast:
+  - com.block.juggle/org.cocos2dx.javascript.AppActivity
