icon link: CIMB Bank -> CIMB OCTO MY

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -109,3 +109,6 @@ rozetka:
 
 block_blast:
   - com.block.juggle/org.cocos2dx.javascript.AppActivity
+
+cimb_bank:
+  - com.cimb.cimbocto/my.com.cimbocto.app.MainActivity
