new compinfos from emails

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -112,3 +112,15 @@ block_blast:
 
 cimb_bank:
   - com.cimb.cimbocto/my.com.cimbocto.app.MainActivity
+
+chefkoch:
+  - de.pixelhouse/de.pixelhouse.chefkoch.app.screen.MainActivity
+
+microsoft_copilot:
+  - com.microsoft.copilot/com.microsoft.copilotn.MainActivity
+
+audible:
+  - com.audible.application/com.audible.application.MainLauncher
+
+nina:
+  - de.materna.bbk.mobile.app/de.materna.bbk.mobile.app.ui.MainActivity
