new icon: Balatro

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -124,3 +124,6 @@ audible:
 
 nina:
   - de.materna.bbk.mobile.app/de.materna.bbk.mobile.app.ui.MainActivity
+
+balatro:
+  - com.playstack.balatro.android/org.love2d.android.PlatformActivity
