new icon: Tabletki

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -127,3 +127,6 @@ nina:
 
 balatro:
   - com.playstack.balatro.android/org.love2d.android.PlatformActivity
+
+tabletki:
+  - com.tabletkiua.tabletki/com.tabletkiua.tabletki.main.SplashScreen
