--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -88,6 +88,48 @@ rsaf:
 
 seafile:
   - com.seafile.seadroid2/com.seafile.seadroid2.ui.SplashActivity
-  
+
 five_surveys:
   - com.fivesurveys.mobile/com.fivesurveys.mobile.MainActivity
+
+idesk_studio:
+  - su.idesk.mobile/crc64f08bd7dc3248ef8c.MainActivity
+
+pepper:
+  - ru.pepper/com.desidime.app.tour.SplashScreenActivity
+
+vtb_online:
+  - ru.vtb24.mobilebanking.android/ru.vtb.feature.signup.impl.loading.presentation.view.LoadingScreenActivity
+
+stars_coffee:
+  - ru.stars_coffee.app/com.example.starbucks_app.MainActivity
+
+tosim:
+  - ua.sim23/ua.sim23.MainActivity
+
+rozetka:
+  - ua.com.rozetka.shop/ua.com.rozetka.shop.ui.MainActivity
+
+block_blast:
+  - com.block.juggle/org.cocos2dx.javascript.AppActivity
+
+cimb_bank:
+  - com.cimb.cimbocto/my.com.cimbocto.app.MainActivity
+
+chefkoch:
+  - de.pixelhouse/de.pixelhouse.chefkoch.app.screen.MainActivity
+
+microsoft_copilot:
+  - com.microsoft.copilot/com.microsoft.copilotn.MainActivity
+
+audible:
+  - com.audible.application/com.audible.application.MainLauncher
+
+nina:
+  - de.materna.bbk.mobile.app/de.materna.bbk.mobile.app.ui.MainActivity
+
+balatro:
+  - com.playstack.balatro.android/org.love2d.android.PlatformActivity
+
+tabletki:
+  - com.tabletkiua.tabletki/com.tabletkiua.tabletki.main.SplashScreen
