freeze versions of python packages

--- a/.github/scripts/requirements.txt
+++ b/.github/scripts/requirements.txt
@@ -1,5 +1,5 @@
-mail-parser
-natsort
-pyyaml
-redbox
-xmltodict
+mail-parser==4.0.0
+natsort==8.4.0
+pyyaml==6.0.2
+redbox==0.2.1
+xmltodict==0.14.2
