add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -133,3 +133,9 @@ balatro:
 
 tabletki:
   - com.tabletkiua.tabletki/com.tabletkiua.tabletki.main.SplashScreen
+
+naruto_ultimate_ninja_storm:
+  - com.bandainamcoent.ultimateninjastorm/com.bandainamcoent.ultimateninjastorm.MainActivity
+
+snaq:
+  - io.snaq.app/io.snaq.app.MainActivity
