--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -139,3 +139,15 @@ naruto_ultimate_ninja_storm:
 
 snaq:
   - io.snaq.app/io.snaq.app.MainActivity
+
+simpluna:
+  - app.simpluna/app.simpluna.MainActivity
+
+totaltv:
+  - ca.totaltv.android/com.minervanetworks.android.itvfusion.devices.Initializer
+
+parkering_goteborg:
+  -se.goteborg.pbolaget.android/se.goteborg.pbolaget.android.SplashActivity
+
+indyx:
+  -com.indyx.android/com.indyx.android.MainActivity
