Add MBANK ComponentInfos

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -20,7 +20,10 @@ totaltv:
   - ca.totaltv.android/com.minervanetworks.android.itvfusion.devices.Initializer
 
 parkering_goteborg:
-  -se.goteborg.pbolaget.android/se.goteborg.pbolaget.android.SplashActivity
+  - se.goteborg.pbolaget.android/se.goteborg.pbolaget.android.SplashActivity
 
 indyx:
-  -com.indyx.android/com.indyx.android.MainActivity
+  - com.indyx.android/com.indyx.android.MainActivity
+
+mbank:
+  - com.maanavan.mb_kyrgyzstan/by.st.kgzBankApp.MainActivity
