new icon: Annelids (+ Alt); made by @ticoeteco23gb

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -27,3 +27,8 @@ indyx:
 
 mbank:
   - com.maanavan.mb_kyrgyzstan/by.st.kgzBankApp.MainActivity
+
+annelids:
+  - cz.gdmt.AnnelidsDemo/cz.gdmt.AnnelidsDemo.AnnelidsActivity
+
+annelids_alt_1: {}
