new icon: Day Off (+ Alt); made by @pedr01gb

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -32,3 +32,8 @@ annelids:
   - cz.gdmt.AnnelidsDemo/cz.gdmt.AnnelidsDemo.AnnelidsActivity
 
 annelids_alt_1: {}
+
+day_off:
+  - jp.co.ponos.yasumimasu/jp.co.ponos.yasumimasu.RunnerActivity
+
+day_off_alt_1: {}
