--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -54,3 +54,6 @@ plant_it:
 
 vendroid_enhanced:
   - com.nin0dev.vendroid/com.nin0dev.vendroid.MainActivity
+
+piwigo:
+  - com.piwigo.piwigo_ng/com.remi.piwigo_ng.MainActivity
