--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -46,7 +46,7 @@ just_rss_legacy:
 kicktipp:
   - de.kicktipp.mbookmark/de.kicktipp.mbookmark.KicktippActivity
 
-pixel_studio:
+google_pixel_studio:
   - com.google.android.apps.pixel.creativeassistant/com.google.android.apps.pixel.merlin.tiktok.app.BlockAppActivity
 
 plant_it:
