--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -27,3 +27,30 @@ indyx:
 
 mbank:
   - com.maanavan.mb_kyrgyzstan/by.st.kgzBankApp.MainActivity
+
+aggregator_news:
+  - com.and96.aggregator_news/com.and96.aggregator_news.MainActivity
+
+appflowy:
+  - io.appflowy.appflowy/io.appflowy.appflowy.MainActivity
+
+app_finder:
+  - scadica.aq/scadica.aq.AC
+
+earnin:
+  - com.activehours/com.activehours.features.splash.SplashActivity
+
+just_rss_legacy:
+  - com.newscooop.justrss.alpha/com.newscooop.justrss.SplashActivity
+
+kicktipp:
+  - de.kicktipp.mbookmark/de.kicktipp.mbookmark.KicktippActivity
+
+google_pixel_studio:
+  - com.google.android.apps.pixel.creativeassistant/com.google.android.apps.pixel.merlin.tiktok.app.BlockAppActivity
+
+plant_it:
+  - com.github.mdeluise.plantit/com.github.mdeluise.plantit.MainActivity
+
+vendroid_enhanced:
+  - com.nin0dev.vendroid/com.nin0dev.vendroid.MainActivity
