--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -28,6 +28,16 @@ indyx:
 mbank:
   - com.maanavan.mb_kyrgyzstan/by.st.kgzBankApp.MainActivity
 
+annelids:
+  - cz.gdmt.AnnelidsDemo/cz.gdmt.AnnelidsDemo.AnnelidsActivity
+
+annelids_alt_1: {}
+
+day_off:
+  - jp.co.ponos.yasumimasu/jp.co.ponos.yasumimasu.RunnerActivity
+
+day_off_alt_1: {}
+
 aggregator_news:
   - com.and96.aggregator_news/com.and96.aggregator_news.MainActivity
 
