--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -64,3 +64,14 @@ plant_it:
 
 vendroid_enhanced:
   - com.nin0dev.vendroid/com.nin0dev.vendroid.MainActivity
+
+alza:
+  - cz.alza.eshop/cz.alza.base.android.setup.ui.activity.MainActivity
+
+alza_alt_1: {}
+
+dpo:
+  - cz.dpo.app/.MainActivity_
+
+odisapka:
+  - cz.kodis.app/.MainActivity_
