--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -64,3 +64,6 @@ plant_it:
 
 vendroid_enhanced:
   - com.nin0dev.vendroid/com.nin0dev.vendroid.MainActivity
+
+linked_in:
+  - com.linkedin.android/com.linkedin.android.authenticator.LaunchActivityDefault
