Add OKX icon + ComponentInfos

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -64,3 +64,6 @@ plant_it:
 
 vendroid_enhanced:
   - com.nin0dev.vendroid/com.nin0dev.vendroid.MainActivity
+
+okx:
+  - com.okinc.okex.gp/com.okinc.core.ok_app.homepage.ui.welcome.WelcomeActivity
