--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -67,3 +67,9 @@ vendroid_enhanced:
 
 okx:
   - com.okinc.okex.gp/com.okinc.core.ok_app.homepage.ui.welcome.WelcomeActivity
+
+nba:
+  - com.longe.allstarhmt/com.netease.l33androidplugin.MainActivity
+
+buz:
+  - com.interfun.buz/com.interfun.buz.startup.EntryPointActivity
