added PID litacka icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -76,6 +76,9 @@ dpo:
 odisapka:
   - cz.kodis.app/.MainActivity_
 
+pid:
+  -  cz.dpp.praguepublictransport/cz.dpp.praguepublictransport.activities.GuideActivity
+
 linked_in:
   - com.linkedin.android/com.linkedin.android.authenticator.LaunchActivityDefault
 
