--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -71,10 +71,10 @@ alza:
 alza_alt_1: {}
 
 dpo:
-  - cz.dpo.app/.MainActivity_
+  - cz.dpo.app/cz.dpo.app.MainActivity_
 
 odisapka:
-  - cz.kodis.app/.MainActivity_
+  - cz.kodis.app/cz.kodis.app.MainActivity_
 
 pid:
   -  cz.dpp.praguepublictransport/cz.dpp.praguepublictransport.activities.GuideActivity
