--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -65,5 +65,20 @@ plant_it:
 vendroid_enhanced:
   - com.nin0dev.vendroid/com.nin0dev.vendroid.MainActivity
 
+alza:
+  - cz.alza.eshop/cz.alza.base.android.setup.ui.activity.MainActivity
+
+alza_alt_1: {}
+
+dpo:
+  - cz.dpo.app/cz.dpo.app.MainActivity_
+
+odisapka:
+  - cz.kodis.app/cz.kodis.app.MainActivity_
+
+pid:
+  -  cz.dpp.praguepublictransport/cz.dpp.praguepublictransport.activities.GuideActivity
+
 linked_in:
   - com.linkedin.android/com.linkedin.android.authenticator.LaunchActivityDefault
+
