Add Housecall Pro icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -73,3 +73,6 @@ nba:
 
 buz:
   - com.interfun.buz/com.interfun.buz.startup.EntryPointActivity
+
+housecall_pro:
+  - housecall.pros/housecall.pros.launcher.LauncherActivity
