--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,15 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+brother_print_service:
+  - com.brother.printservice/com.brother.printservice.settings.SettingsActivity
+
+honista:
+  - cc.honista.app/com.app.launcher_0
+
+neko_atsume_2:
+  - jp.co.hit_point.nekoatsume2/com.unity3d.player.UnityPlayerActivity
+
+nintendo_music:
+  - com.nintendo.znba/com.nintendo.znba.MainActivity
