--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -24,3 +24,12 @@ neko_atsume_2:
 
 nintendo_music:
   - com.nintendo.znba/com.nintendo.znba.MainActivity
+
+thunderbird:
+  - net.thunderbird.android/com.fsck.k9.activity.MessageList
+
+pvz:
+  - com.ea.game.pvzfree_row/com.ea.game.pvzfree_row.PvZActivity
+
+character_ai:
+  - ai.character.app/ai.character.app.MainActivityDefault
