--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,24 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+brother_print_service:
+  - com.brother.printservice/com.brother.printservice.settings.SettingsActivity
+
+honista:
+  - cc.honista.app/com.app.launcher_0
+
+neko_atsume_2:
+  - jp.co.hit_point.nekoatsume2/com.unity3d.player.UnityPlayerActivity
+
+nintendo_music:
+  - com.nintendo.znba/com.nintendo.znba.MainActivity
+
+thunderbird:
+  - net.thunderbird.android/com.fsck.k9.activity.MessageList
+
+pvz:
+  - com.ea.game.pvzfree_row/com.ea.game.pvzfree_row.PvZActivity
+
+character_ai:
+  - ai.character.app/ai.character.app.MainActivityDefault
