--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -33,3 +33,9 @@ pvz:
 
 character_ai:
   - ai.character.app/ai.character.app.MainActivityDefault
+
+grab:
+  - com.grabtaxi.passenger/com.grab.pax.newface.common.alias.DefaultLauncherAlias
+
+quickmemo:
+  - com.transsion.notebook/com.transsion.notebook.NotesList
