Add icon for soonta

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -33,3 +33,6 @@ pvz:
 
 character_ai:
   - ai.character.app/ai.character.app.MainActivityDefault
+  
+soonta:
+  - com.ziiforce.soonta/com.ziiforce.chameleon.MainActivity
