--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -69,3 +69,24 @@ vespucci:
 
 thunderbird:
   - net.thunderbird.android/com.fsck.k9.activity.MessageList
+
+kahoot:
+  - no.mobitroll.kahoot.android/no.mobitroll.kahoot.android.Default
+
+monument_valley:
+  - com.ustwo.monumentvalley/com.unity3d.player.UnityPlayerActivity
+
+bbc_news:
+  - bbc.mobile.news.uk/uk.co.bbc.chrysalis.discovery.ui.signin.SplashActivity
+
+google_photos:
+  - app.revanced.android.photos/com.google.android.apps.photos.home.HomeActivity
+
+dolby_atmos:
+  - com.motorola.dolby.dolbyui.ui/com.motorola.dolby.dolbyui.ui.LauncherActivity
+
+ente:
+  - io.ente.photos.independent/io.ente.photos.MainActivity
+
+youtube_revanced_alt_7:
+  - yt.rvx.noname.exe/com.google.android.youtube.app.honeycomb.Shell$HomeActivity
